--- a/blog/src/css/main.scss
+++ b/blog/src/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: 'Crimson Pro', serif;
+$base-font-family: 'EB Garamond', serif;
 $secondary-font-family: 'Pragati Narrow', sans-serif;
 $monospace-font-family: 'Inconsolata', 'Ubuntu Mono', monospace;
 $base-font-size:   22px;
