--- a/src/index.css
+++ b/src/index.css
@@ -181,7 +181,9 @@ body>pre {
   padding: 4rem 0 2rem 0;
 }
 
-.index-page h1 {}
+.index-page h1 {
+  font-size: 3rem;
+}
 
 .index-page p {
   font-size: 1.25rem;
