--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,14 @@ p {
   margin: 1rem 0;
 }
 
+li > ul, li > ol {
+  margin: .75rem 0;
+}
+
+li {
+  margin: 0.25rem 0;
+}
+
 figure {
   margin: 2rem 0;
   display: flex;
@@ -236,11 +244,27 @@ body>pre {
 }
 
 /* Syntax highlighting overrides */
+
+code span.im {
+  font-weight: bold;
+}
+
+code span.at,
 code span.dt {
   text-decoration: none;
   font-style: italic;
 }
 
 code span.co {
-  color: #888;
+  color: #999;
+}
+
+code span.st, code span.ss {
+  color: #444;
+}
+
+@media (prefers-color-scheme: dark) {
+  code span.st, code span.ss {
+    color: #ccc;
+  }
 }
