use jetbrains mono for code

--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ dd {
 
 pre,
 code {
-  font-family: "IBM Plex Mono", monospace;
+  font-family: "Jetbrains Mono", monospace;
   font-weight: 400;
 }
 
