--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: serif;
+  font-family: "IBM Plex Serif", serif;
   font-weight: 400;
 }
 
@@ -109,7 +109,7 @@ dd {
 
 pre,
 code {
-  font-family: monospace;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 1rem;
   font-weight: 400;
 }
