--- a/src/index.css
+++ b/src/index.css
@@ -136,7 +136,7 @@ dd {
 
 pre,
 code {
-  font-family: "BerkeleyMonoWeb", Arial, monospace;
+  font-family: "BerkeleyMonoWeb", monospace;
   font-size: .8rem;
   font-weight: normal;
 }
